--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
 Body{
   text-align: center;
 }
+
+.counter {
+  margin: 0 auto;
+  border: 2px solid gray;
+  width: 50%;
+  padding: 10px 10px;
+}
