--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,13 @@
-Body{
+body{
   text-align: center;
+  padding: 10%;
 }
 
 .counter {
   margin: 0 auto;
   border: 2px solid gray;
-  width: 50%;
+  width: 200px;
+  height: 200px;
   padding: 10px 10px;
+ 
 }
